--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ aliases:
     parameters:
       xcode_version:
         type: string
-        default: '15.3'
+        default: "15.3"
     environment:
       CIRCLECI_TESTS_GENERATE_SNAPSHOTS: << pipeline.parameters.generate_snapshots >>
       CIRCLECI_TESTS_GENERATE_REVENUECAT_UI_SNAPSHOTS: << pipeline.parameters.generate_revenuecatui_snapshots >>
@@ -73,12 +73,12 @@ commands:
         type: string
     steps:
       - install-brew-dependency:
-          dependency_name: 'xcodes'
+          dependency_name: "xcodes"
       - run:
           name: Install simulator
           command: | # Print all available simulators and install required one
-              xcodes runtimes
-              sudo xcodes runtimes install "<< parameters.runtime-name >>"
+            xcodes runtimes
+            sudo xcodes runtimes install "<< parameters.runtime-name >>"
 
   install-bundle-dependencies:
     parameters:
@@ -93,9 +93,9 @@ commands:
           name: Bundle install
           working_directory: << parameters.directory >>
           command: |
-              bundle config set --local clean 'true'
-              bundle config set --local path 'vendor/bundle'
-              bundle install
+            bundle config set --local clean 'true'
+            bundle config set --local path 'vendor/bundle'
+            bundle install
       - save_cache:
           key: v2-gem-cache-{{ checksum "Gemfile.lock" }}-{{ arch }}
           paths:
@@ -122,14 +122,14 @@ commands:
           condition: << parameters.install_xcbeautify >>
           steps:
             - install-brew-dependency:
-                dependency_name: 'xcbeautify'
+                dependency_name: "xcbeautify"
       - install-brew-dependency:
-          dependency_name: 'swiftlint'
+          dependency_name: "swiftlint"
       - when:
           condition: << parameters.install_mint >>
           steps:
             - install-brew-dependency:
-                dependency_name: 'mint'
+                dependency_name: "mint"
       - run: brew tap robotsandpencils/made
       - save_cache:
           key: homebrew-cache-{{ checksum "Brewfile.lock.json" }}-{{ arch }}
@@ -187,8 +187,8 @@ commands:
       - run:
           name: Compress result bundle
           command: |
-             tar -czf << parameters.bundle_name >>.xcresult.tar.gz << parameters.bundle_name >>.xcresult && \
-             rm -r << parameters.bundle_name >>.xcresult
+            tar -czf << parameters.bundle_name >>.xcresult.tar.gz << parameters.bundle_name >>.xcresult && \
+            rm -r << parameters.bundle_name >>.xcresult
           working_directory: << parameters.directory >>
           when: always
 
@@ -231,7 +231,7 @@ commands:
           name: Archive
           working_directory: << parameters.directory >>
           command: |
-              bundle exec fastlane archive
+            bundle exec fastlane archive
 
   scan-and-archive-all-platforms:
     parameters:
@@ -254,7 +254,7 @@ commands:
           name: Archive all platforms
           working_directory: << parameters.directory >>
           command: |
-              bundle exec fastlane archive_all_platforms
+            bundle exec fastlane archive_all_platforms
 
   install-dependencies-scan-and-archive:
     parameters:
@@ -267,29 +267,29 @@ commands:
           directory: << parameters.directory >>
 
   setup-git-credentials:
-     steps:
-       - run:
-           name: Setup Git config
-           command: |
-             git config --global user.email $GIT_EMAIL
-             git config --global user.name $GIT_USERNAME
+    steps:
+      - run:
+          name: Setup Git config
+          command: |
+            git config --global user.email $GIT_EMAIL
+            git config --global user.name $GIT_USERNAME
 
   trust-github-key:
     steps:
       - run:
           name: Trust GitHub key
           command: |
-              for ip in $(dig @8.8.8.8 github.com +short); \
-              do ssh-keyscan github.com,$ip; \
-              ssh-keyscan $ip; \
-              done 2>/dev/null >> ~/.ssh/known_hosts
+            for ip in $(dig @8.8.8.8 github.com +short); \
+            do ssh-keyscan github.com,$ip; \
+            ssh-keyscan $ip; \
+            done 2>/dev/null >> ~/.ssh/known_hosts
 
   update-spm-installation-commit:
     steps:
       - run:
           name: Update git commit in targets that use SPM for dependencies
           command: |
-              bundle exec fastlane update_swift_package_commit
+            bundle exec fastlane update_swift_package_commit
 
   update-carthage-installation-commit:
     steps:
@@ -298,7 +298,7 @@ commands:
           name: Update git commit in Carthage Installation tests
           working_directory: Tests/InstallationTests/CarthageInstallation/
           command: |
-              bundle exec fastlane update_carthage_commit
+            bundle exec fastlane update_carthage_commit
 
   create-snapshot-pr-if-needed:
     parameters:
@@ -789,8 +789,6 @@ jobs:
 
   release-checks:
     <<: *base-job
-    # Fix-me: Carthage can't build fat frameworks on Apple Silicon. See https://github.com/RevenueCat/purchases-ios/pull/3582
-    resource_class: macos.x86.medium.gen2
     steps:
       - checkout
       - trust-github-key
@@ -831,8 +829,6 @@ jobs:
 
   make-release:
     <<: *base-job
-    # Fix-me: Carthage can't build fat frameworks on Apple Silicon. See https://github.com/RevenueCat/purchases-ios/pull/3582
-    resource_class: macos.x86.medium.gen2
     steps:
       - checkout
       - trust-github-key
@@ -886,7 +882,7 @@ jobs:
           name: Install Pods
           working_directory: Tests/InstallationTests/CocoapodsInstallation/
           command: |
-              bundle exec pod install
+            bundle exec pod install
       - scan-and-archive:
           directory: Tests/InstallationTests/CocoapodsInstallation
 
@@ -942,7 +938,7 @@ jobs:
           name: Carthage Update
           working_directory: Tests/InstallationTests/CarthageInstallation/
           command: |
-              bundle exec fastlane installation_tests
+            bundle exec fastlane installation_tests
 
       - install-dependencies-scan-and-archive:
           directory: Tests/InstallationTests/CarthageInstallation/
@@ -1066,50 +1062,50 @@ jobs:
 
   notify-on-non-patch-release-branches:
     docker:
-      - image: 'cimg/base:stable'
+      - image: "cimg/base:stable"
     steps:
       - slack/notify:
           custom: |
-              {
-                "text": "Public facing changes detected",
-                "blocks": [
-                  {
-                    "type": "header",
-                    "text": {
-                      "type": "plain_text",
-                      "text": "REMINDER :raised_hand:",
-                      "emoji": true
-                    }
-                  },
-                  {
-                    "type": "section",
-                    "text": {
-                      "type": "mrkdwn",
-                      "text": "Do *public docs* need to be updated?"
-                    }
-                  },
-                  {
-                    "type": "section",
-                    "text": {
-                      "type": "mrkdwn",
-                      "text": "Does the *SDK parity spreadsheet* need to be updated?"
-                    }
-                  },
-                  {
-                    "type": "section",
-                    "fields": [
-                      {
-                        "type": "mrkdwn",
-                        "text": "*Project*: $CIRCLE_PROJECT_REPONAME"
-                      },
-                      {
-                        "type": "mrkdwn",
-                        "text": "*Branch*: $CIRCLE_BRANCH"
-                      }
-                    ]
+            {
+              "text": "Public facing changes detected",
+              "blocks": [
+                {
+                  "type": "header",
+                  "text": {
+                    "type": "plain_text",
+                    "text": "REMINDER :raised_hand:",
+                    "emoji": true
                   }
-                ]
-              }
+                },
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "Do *public docs* need to be updated?"
+                  }
+                },
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "Does the *SDK parity spreadsheet* need to be updated?"
+                  }
+                },
+                {
+                  "type": "section",
+                  "fields": [
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Project*: $CIRCLE_PROJECT_REPONAME"
+                    },
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Branch*: $CIRCLE_BRANCH"
+                    }
+                  ]
+                }
+              ]
+            }
 
   deploy-to-spm:
     docker:
@@ -1134,102 +1130,102 @@ workflows:
     when: << pipeline.parameters.generate_snapshots >>
     jobs:
       - run-test-ios-17:
-          xcode_version: '15.2'
+          xcode_version: "15.2"
       - run-test-ios-16:
-          xcode_version: '14.3.0'
+          xcode_version: "14.3.0"
       - run-test-ios-15:
-          xcode_version: '14.3.0'
+          xcode_version: "14.3.0"
       - run-test-ios-14:
-          xcode_version: '14.2.0'
+          xcode_version: "14.2.0"
       - run-test-ios-13:
-          xcode_version: '14.2.0'
+          xcode_version: "14.2.0"
       - run-test-ios-12:
-          xcode_version: '14.2.0'
+          xcode_version: "14.2.0"
       - run-test-macos
 
   generate_revenuecatui_snapshots:
     when: << pipeline.parameters.generate_revenuecatui_snapshots >>
     jobs:
       - spm-revenuecat-ui-ios-15:
-          xcode_version: '14.3.0'
+          xcode_version: "14.3.0"
       - spm-revenuecat-ui-ios-16:
-          xcode_version: '14.3.0'
+          xcode_version: "14.3.0"
       - spm-revenuecat-ui-ios-17:
-          xcode_version: '15.2'
+          xcode_version: "15.2"
 
   build-test:
     when:
       and:
         - not:
-            equal: [ scheduled_pipeline, << pipeline.trigger_source >> ]
+            equal: [scheduled_pipeline, << pipeline.trigger_source >>]
         - not: << pipeline.parameters.generate_snapshots >>
         - not: << pipeline.parameters.generate_revenuecatui_snapshots >>
     jobs:
       - lint
       - spm-release-build-xcode-14:
-          xcode_version: '14.3.0'
+          xcode_version: "14.3.0"
       - spm-release-build-xcode-15:
-          xcode_version: '15.2'
+          xcode_version: "15.2"
       - spm-xcode-14-1:
-          xcode_version: '14.1.0'
+          xcode_version: "14.1.0"
       - spm-custom-entitlement-computation-build
       - spm-receipt-parser
       - spm-revenuecat-ui-ios-15:
-          xcode_version: '14.3.0'
+          xcode_version: "14.3.0"
       - spm-revenuecat-ui-ios-16:
-          xcode_version: '14.3.0'
+          xcode_version: "14.3.0"
       - spm-revenuecat-ui-ios-17:
-          xcode_version: '15.2'
+          xcode_version: "15.2"
       - spm-revenuecat-ui-watchos
       - run-test-macos
       - run-test-ios-17:
-          xcode_version: '15.2'
+          xcode_version: "15.2"
       - run-test-ios-16:
-          xcode_version: '14.3.0'
+          xcode_version: "14.3.0"
       - run-test-ios-15:
-          xcode_version: '14.3.0'
+          xcode_version: "14.3.0"
       - run-test-watchos
       - run-test-tvos
       # Pre-iOS 15 requires macOS 12 which requires Xcode 14.2
       # See https://circleci.com/docs/using-macos/#supported-xcode-versions
       - run-test-ios-14:
-          xcode_version: '14.2.0'
+          xcode_version: "14.2.0"
       - run-test-ios-13:
-          xcode_version: '14.2.0'
+          xcode_version: "14.2.0"
           <<: *release-branches-and-main
       - run-test-ios-12:
-          xcode_version: '14.2.0'
+          xcode_version: "14.2.0"
           <<: *release-branches-and-main
       - build-tv-watch-and-macos
       - build-visionos
       - backend-integration-tests-SK1:
           filters:
-              branches:
-                # Forked pull requests have CIRCLE_BRANCH set to pull/XXX
-                ignore: /pull\/[0-9]+/
+            branches:
+              # Forked pull requests have CIRCLE_BRANCH set to pull/XXX
+              ignore: /pull\/[0-9]+/
       - backend-integration-tests-SK2:
           filters:
-              branches:
-                # Forked pull requests have CIRCLE_BRANCH set to pull/XXX
-                ignore: /pull\/[0-9]+/
+            branches:
+              # Forked pull requests have CIRCLE_BRANCH set to pull/XXX
+              ignore: /pull\/[0-9]+/
       - backend-integration-tests-other:
           filters:
-              branches:
-                # Forked pull requests have CIRCLE_BRANCH set to pull/XXX
-                ignore: /pull\/[0-9]+/
+            branches:
+              # Forked pull requests have CIRCLE_BRANCH set to pull/XXX
+              ignore: /pull\/[0-9]+/
       - backend-integration-tests-offline:
           # These tests are flaky due to FB13133387 so we don't want the noise in every PR
           <<: *release-branches-and-main
       - backend-integration-tests-custom-entitlements:
           filters:
-              branches:
-                # Forked pull requests have CIRCLE_BRANCH set to pull/XXX
-                ignore: /pull\/[0-9]+/
+            branches:
+              # Forked pull requests have CIRCLE_BRANCH set to pull/XXX
+              ignore: /pull\/[0-9]+/
 
   deploy:
     when:
       not:
-        equal: [ scheduled_pipeline, << pipeline.trigger_source >> ]
+        equal: [scheduled_pipeline, << pipeline.trigger_source >>]
     jobs:
       - release-checks:
           <<: *release-branches
@@ -1287,7 +1283,7 @@ workflows:
   snapshot-bump:
     when:
       not:
-        equal: [ scheduled_pipeline, << pipeline.trigger_source >> ]
+        equal: [scheduled_pipeline, << pipeline.trigger_source >>]
     jobs:
       - prepare-next-version:
           <<: *only-main-branch
@@ -1297,22 +1293,23 @@ workflows:
   weekly-run-workflow:
     when:
       and:
-        - equal: [ scheduled_pipeline, << pipeline.trigger_source >> ]
-        - equal: [ "release-train", << pipeline.schedule.name >> ]
+        - equal: [scheduled_pipeline, << pipeline.trigger_source >>]
+        - equal: ["release-train", << pipeline.schedule.name >>]
     jobs:
       - release-train
 
   daily-loadshedder-integration-tests:
     when:
       and:
-        - equal: [ scheduled_pipeline, << pipeline.trigger_source >> ]
-        - equal: [ "load_shedder_integration_tests", << pipeline.schedule.name >> ]
+        - equal: [scheduled_pipeline, << pipeline.trigger_source >>]
+        - equal:
+            ["load_shedder_integration_tests", << pipeline.schedule.name >>]
     jobs:
       - loadshedder-integration-tests-v3
       - integration-tests-all
 
   manual-trigger-bump:
     when:
-      equal: [ bump, << pipeline.parameters.action >> ]
+      equal: [bump, << pipeline.parameters.action >>]
     jobs:
       - release-train
