--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -340,9 +340,6 @@ commands:
           destination: scan-test-output
 
   push-to-spm:
-    docker:
-      - image: cimg/base:stable
-    resource_class: small
     steps:
       - checkout
       - setup-git-credentials
@@ -1026,6 +1023,13 @@ jobs:
           command: bundle exec fastlane automatic_bump github_rate_limit:10
       - push-to-spm
 
+  push-to-spm-job:
+    docker:
+      - image: cimg/base:stable
+    resource_class: small
+    steps:
+      - push-to-spm
+
   integration-tests-all:
     <<: *base-job
     steps:
@@ -1236,10 +1240,6 @@ workflows:
               branches:
                 # Forked pull requests have CIRCLE_BRANCH set to pull/XXX
                 ignore: /pull\/[0-9]+/
-
-  deploy-spm:
-    jobs:
-      - push-to-spm
 
   deploy:
     when:
