Add back workflow test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1241,6 +1241,10 @@ workflows:
                 # Forked pull requests have CIRCLE_BRANCH set to pull/XXX
                 ignore: /pull\/[0-9]+/
 
+  deploy-spm:
+    jobs:
+      - push-to-spm
+
   deploy:
     when:
       not:
