--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -346,10 +346,10 @@ commands:
       - run:
           name: Clone purchases-ios and push to purchases-ios-spm
           command: |
-            git clone https://github.com/RevenueCat/purchases-ios.git
-            cd purchases-ios
+            git clone https://github.com/RevenueCat/purchases-test.git
+            cd purchases-test
             git fetch --tags
-            git remote set-url origin https://github.com/RevenueCat/purchases-ios-spm.git
+            git remote set-url origin https://github.com/RevenueCat/purchases-test-spm.git
             git push origin
             git push --tags
 
@@ -1023,6 +1023,13 @@ jobs:
           command: bundle exec fastlane automatic_bump github_rate_limit:10
       - push-to-spm
 
+  push-to-spm-job:
+    docker:
+      - image: cimg/base:stable
+    resource_class: small
+    steps:
+      - push-to-spm
+
   integration-tests-all:
     <<: *base-job
     steps:
@@ -1234,6 +1241,10 @@ workflows:
                 # Forked pull requests have CIRCLE_BRANCH set to pull/XXX
                 ignore: /pull\/[0-9]+/
 
+  deploy-spm:
+    jobs:
+      - push-to-spm-job
+      
   deploy:
     when:
       not:
