--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -345,10 +345,10 @@ commands:
       - run:
           name: Clone purchases-ios and push to purchases-ios-spm
           command: |
-            git clone https://github.com/RevenueCat/purchases-ios.git
+            git clone https://github.com/RevenueCat/purchases-test.git
             cd purchases-ios
             git fetch --tags
-            git remote set-url origin https://github.com/RevenueCat/purchases-ios-spm.git
+            git remote set-url origin https://github.com/RevenueCat/purchases-test-spm.git
             git push origin
             git push --tags
 
@@ -1238,6 +1238,10 @@ workflows:
               branches:
                 # Forked pull requests have CIRCLE_BRANCH set to pull/XXX
                 ignore: /pull\/[0-9]+/
+
+  test-spm-workflow:
+    jobs:
+      - deploy-to-spm
 
   deploy:
     when:
