--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,6 +113,18 @@ commands:
         type: boolean
         default: false
     steps:
+      # CircleCI images fail on Ruby 3.3
+      # https://github.com/fastlane/fastlane/issues/21794#issuecomment-2021331335
+      - run:
+          name: Set Ruby 3.2.2
+          command: |
+            eval "$(rbenv init -)"
+            rbenv install -s 3.2.2  # Replace with your required Ruby version
+            rbenv global 3.2.2
+            rbenv rehash
+      - run:
+          name: Verify Ruby version
+          command: ruby -v
       - install-bundle-dependencies:
           directory: << parameters.directory >>
       - restore_cache:
