--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -344,6 +344,12 @@ commands:
           no_output_timeout: 5m
           environment:
             SCAN_DEVICE: iPhone 14 (17.2.0)
+      - run:
+          name: Run RETRY backend_integration Tests
+          command: bundle exec fastlane retry_failed_tests
+          no_output_timeout: 5m
+          environment:
+            SCAN_DEVICE: iPhone 14 (17.2.0)
       - compress_result_bundle:
           directory: fastlane/test_output/xctest/ios
           bundle_name: BackendIntegrationTests
