--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -345,8 +345,20 @@ commands:
           environment:
             SCAN_DEVICE: iPhone 14 (17.2.0)
       - run:
-          name: Run RETRY 1 backend_integration Tests
-          command: bundle exec fastlane retry_failed_tests
+          name: Run RETRY 1 (of 3) backend_integration Tests
+          command: bundle exec fastlane retry_failed_tests retry_attempt:1
+          no_output_timeout: 5m
+          environment:
+            SCAN_DEVICE: iPhone 14 (17.2.0)
+      - run:
+          name: Run RETRY 2 (of 3) backend_integration Tests
+          command: bundle exec fastlane retry_failed_tests retry_attempt:2
+          no_output_timeout: 5m
+          environment:
+            SCAN_DEVICE: iPhone 14 (17.2.0)
+      - run:
+          name: Run RETRY 3 (of 3) backend_integration Tests
+          command: bundle exec fastlane retry_failed_tests retry_attempt:3
           no_output_timeout: 5m
           environment:
             SCAN_DEVICE: iPhone 14 (17.2.0)
